<resources>
    <string name="app_name">CryptoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_moneda">Nombre Moneda</string>
    <string name="symbol_moneda">simbolo Moneda</string>
    <string name="get_info">Solicitar Información</string>
    <string name="rank">Ranking</string>
    <string name="price">Precio</string>
    <string name="date">Fecha</string>
    <string name="status">Estado</string>
    <string name="btn_back">Volver</string>
</resources>